# Calendar_PROJECT

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  appicon.rc  daycellwidget.cpp  dayheader.h  eventdialog.cpp  funnytipwidget.cpp  mainwindow.cpp  resources.qrc  settingsdialog.cpp  timeruler.h  timetableslotwidget.h  timetableviewwidget.h
console/: events.txt  main.cpp
repo/: qtError.txt
repo/src/: calendarview.cpp  calendarview.h  dayheader.cpp  eventdialog.h  funnytipwidget.cpp  mainwindow.cpp  sidepanel.h
resource/: style.qss
resources/: style.qss
src/: CMakeLists.txt  calendarview.cpp  calendarview.h  daycellwidget.cpp  daycellwidget.h  daydetaildialog.cpp  dayheader.cpp  dayheader.h  eventdialog.cpp  eventdialog.h  eventitem.cpp  eventitem.h  funnytipwidget.cpp  funnytipwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  monthviewwidget.cpp  monthviewwidget.h  resources.qrc  sessionviewwidget.cpp  sessionviewwidget.h  settingsdialog.cpp  settingsdialog.h  sidepanel.cpp  sidepanel.h  timeruler.cpp  timeruler.h  timetableslotwidget.cpp  timetableslotwidget.h  timetableviewwidget.cpp  timetableviewwidget.h
src (1)/: calendarview.cpp  calendarview.h  daycellwidget.h  daydetaildialog.cpp  daydetaildialog.h  mainwindow.h  settingsdialog.h  timetableslotwidget.cpp  timetableviewwidget.cpp
